# pyconkr2021-APITest

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pyconkor2021_pytest_example/: README.md  docker-compose.yml  manage.py  pytest.ini  requirements.txt
pyconkor2021_pytest_example/pyconkor2021_pytest_example/: asgi.py  settings.py  urls.py  wsgi.py
pyconkor2021_pytest_example/pyconkor2021_pytest_example/settings/: base.py  test.py
pyconkor2021_pytest_example/shop/: models.py  serializers.py  urls.py  views.py
pyconkor2021_pytest_example/shop/migrations/: 0001_initial.py
pyconkor2021_pytest_example/test/: conftest.py
pyconkor2021_pytest_example/test/test_user/: test_apis.py
pyconkor2021_pytest_example/tests/: conftest.py
pyconkor2021_pytest_example/tests/fixtures/: products.json  users.json
pyconkor2021_pytest_example/tests/product/: test_apis.py
pyconkor2021_pytest_example/tests/test_product/: test_apis.py
pyconkor2021_pytest_example/tests/test_user/: test_apis.py
pyconkor2021_pytest_example/tests/user/: test_apis.py
pyconkor2021_pytest_example/user/: models.py  serializers.py  urls.py  views.py
pyconkor2021_pytest_example/user/migrations/: 0001_initial.py
